2004-03-07  Stefan Jahn  <stefan@lkcc.org>

	* parse_netlist.y: Added parser and scanner rules for 
	equations inside netlists.

2004-02-18  Stefan Jahn  <stefan@lkcc.org>

	* eqnsys.cpp (solve_lu): New equation system solver implemented
	using so called LU decomposition.

2004-02-17  Stefan Jahn  <stefan@lkcc.org>

	* eqnsys.cpp (solve_gauss_jordan): New solution method for
	linear equation systems implemented.

	* Makefile.am (libqucsator_a_SOURCES): The libqucsator library
	can be used by the Qucs GUI in order to handle datasets.  The
	header 'libqucsator.h' must be included.

2004-02-16  Stefan Jahn  <stefan@lkcc.org>

	* operatingpoint.cpp: New class representing an operating
	point of a non-linear component.

	* circuit.cpp: Added the functionality in order to handle
	the operating point of non-linear components.

	* object.cpp (hasProperty): New function checking whether an
	object has a certain property or not.

	* dcsolver.cpp: Generalized the G matrix creation to apply
	also to components with more than two ports.

	* circuit.cpp (setY, getY): Made these functions depending on
	the specified port numbers.

2004-02-15  Stefan Jahn  <stefan@lkcc.org>

	* matrix.cpp (exchange): New function for swapping two rows
	of a matrix object.  Used during Gaussian elimination.

	* eqnsys.cpp: New class implementing a linear equation system
	solver with different kind of algorithms.

2004-02-13  Stefan Jahn  <stefan@lkcc.org>

	* vector.cpp: Vectors do have an arbitrary origin.  Used
	to identify analysis results.

	* variable.cpp: Added loads of operations regarding double
	values.

	* ucs.cpp (main): Creating root environment and passing
	it down to analyses.

	* property.cpp, object.cpp: Properties can now also be variables.

	* net.cpp: Ordering analysis for additional parameter sweeps
	implemented.

	* input.cpp: Handling variables correctly.  Creating variables
	in a certain environment and using them later works somehow.
